Fixes for CSS so everything aligns similarly and fallback fonts don't cause it to wrap badly

--- a/source/Octopus.Server.Extensibility.Authentication.DirectoryServices/Web/Static/styles/directoryServices.css
+++ b/source/Octopus.Server.Extensibility.Authentication.DirectoryServices/Web/Static/styles/directoryServices.css
@@ -13,15 +13,18 @@
 
 .ds-button img {
     margin-left: 10px;
-    margin-right: 10px;
-    margin-top: -2px;
+    margin-top: 9px; /* ([container-40h]-[image-22h]) / 2 = 9px */
+    float: left;
 }
 
 .ds-button div {
     font-weight: 600;
-    margin-top: 10px;
     display: inline-block;
-    margin-left: 5px;
-    margin-right: 10px;
     color: #000000;
+    float: right;
+    text-align: left;
+    width: 200px;
+    height: 40px;
+    line-height: 40px;
+    overflow: hidden;
 }
